deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager-client
  labels:
    app: user-manager-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-manager-client
  template:
    metadata:
      labels:
        app: user-manager-client
    spec:
      containers:
        - name: user-manager-client
          image: pooja17122/user-manager-client:8b97516c
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager-server
  labels:
    app: user-manager-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager-server
  template:
    metadata:
      labels:
        app: user-manager-server
    spec:
      containers:
        - name: user-manager-server
          image: pooja17122/user-manager-server:8b97516c
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
